# jupyter_export_template

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: copilot-instructions.md
docs/: index.md
examples/: batch_output_academic.html  batch_output_default.html  batch_output_minimal.html  config.yaml  test_notebook.ipynb  test_output.html
jupyter_export_template/: __init__.py  cli.py  exporter.py  filters.py
jupyter_export_template/templates/: academic.j2  default.j2  minimal.j2  test.j2
jupyter_export_template/templates/custom-default/: index.html.j2
jupyter_export_template/templates/custom-minimal/: index.html.j2
tests/: test_exporter.py
